tests/syntax-error/DuplicateTypeSignature.vix
test : int
test : int
test = 123
